syntax = "proto3";
option java_multiple_files = true;
package net.reappay.pg.payments.paymentsback.proto;

message OrderRequest {
  string orderNumber  = 1;
  string orderName    = 2;
  string goodsName     = 3;
  string goodsCode    = 4;
  string productType  = 5;
  string custId       = 6;
  string custName     = 7;
  string custEmail    = 8;
  string custPhone    = 9;
  string custIp       = 10;
  string expDate      = 11;
  string installment  = 12;
  int32 totAmt       = 13;
  string certiType    = 14;
  string storeId      = 15;
  string pgMerchNo    = 16;
  string pgTid        = 17;
  string payMethod    = 18;
  string tranSeq      = 19;
  int32 vatAmt        = 20;
  int32 freeAmt       = 21;
  string orderDate    = 22;
  string orderTime    = 23;
  string returnUrl    = 24;
  string successUrl   = 25;
  string failtureUrl  = 26;
  string tranType     = 27;

}

message OrderResponse {
  string orderNumber  = 1;
  string orderName    = 2;
  string goodsName     = 3;
  string goodsCode    = 4;
  string productType  = 5;
  string custId       = 6;
  string custName     = 7;
  string custEmail    = 8;
  string custPhone    = 9;
  string custIp       = 10;
  string expDate      = 11;
  string installment  = 12;
  int32  totAmt       = 13;
  string certiType    = 14;
  string storeId      = 15;
  string pgMerchNo    = 16;
  string pgTid        = 17;
  string payMethod   = 18;
  string tranSeq      = 19;
  int32 vatAmt        = 20;
  int32 freeAmt       = 21;
  string orderDate    = 22;
  string orderTime    = 23;
  string returnUrl    = 24;
  string successUrl   = 25;
  string failtureUrl  = 26;
  string tranType     = 27;
}

service OrderService {
  rpc orderCall (OrderRequest) returns (OrderResponse);
}